pengbai/pengbaideployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pengbai
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: pengbai
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pengbai
    spec:
      containers:
        - name: container
          image: pengbai/docker-supermario
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "1000Mi"
              cpu: "500m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
