pengbai/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pengbairoute
  namespace: default
spec:
  host: nginxpod-default.apps-crc.testing
  to:
    kind: Service
    name: pengbai
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
